# O3GL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
doc/: buffer  framebuffer  render  sampler  shaders  sync  texture  transformfeedback  util  vertexarray
example/: Main.cpp
include/O3GL/: Bitfield.h  Buffer.h  Context.h  GLDefs.h  Types.h
scripts/: glspec.py
src/: Buffer.cpp  Context.cpp  ContextGLFuncProtos.h  InternalContext.h
